@@ -2,3 +2,12 @@ comment: false
 ignore:
   - "src/blake*.c"
   - "src/blake*.h"
+coverage:
+  status:
+    project:
+      default:
+        target: 70%    # the (on purpose low) required coverage value
+        threshold: 10% # the permitted delta in hitting the target
+    patch:
+      default:
+        target: 0%     # the (on purpose low) required coverage value
